# ChangeLog for net-im/gossip
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.58 2007/03/07 20:37:16 tester Exp $

  07 Mar 2007; Olivier Crête <tester@gentoo.org> gossip-0.22.ebuild:
  Stable on amd64

  24 Feb 2007; nixnut <nixnut@gentoo.org> gossip-0.22.ebuild:
  Stable on ppc wrt bug 167825

  22 Feb 2007; Christian Faulhammer <opfer@gentoo.org> gossip-0.22.ebuild:
  stable x86; bug 167825

  22 Feb 2007; Jason Wever <weeve@gentoo.org> gossip-0.22.ebuild:
  Stable on SPARC wrt bug #167825.

  21 Feb 2007; Markus Rothe <corsair@gentoo.org> gossip-0.22.ebuild:
  Stable on ppc64; bug #167825

*gossip-0.22 (13 Jan 2007)

  13 Jan 2007; Olivier Crête <tester@gentoo.org> -gossip-0.19.ebuild,
  -gossip-0.20.ebuild, +gossip-0.22.ebuild:
  New version, cleanup old

*gossip-0.20 (19 Dec 2006)

  19 Dec 2006; Marinus Schraal <foser@gentoo.org> gossip-0.19.ebuild :
  New release

  23 Nov 2006; Olivier Crête <tester@gentoo.org> -gossip-0.18.ebuild,
  gossip-0.19.ebuild:
  Move depend to dbus-glib, and removed old version

*gossip-0.19 (11 Nov 2006)

  11 Nov 2006; Olivier Crête <tester@gentoo.org> -gossip-0.14.ebuild,
  -gossip-0.15.ebuild, -gossip-0.16.ebuild, +gossip-0.19.ebuild:
  Version bump, cleanup old versions

*gossip-0.18 (28 Oct 2006)

  28 Oct 2006; Olivier Crête <tester@gentoo.org> +gossip-0.18.ebuild:
  Version bump, bug #149422

*gossip-0.16 (17 Sep 2006)

  17 Sep 2006; Marinus Schraal <foser@gentoo.org> gossip-0.16.ebuild :
  New release

*gossip-0.15 (30 Aug 2006)

  30 Aug 2006; Marinus Schraal <foser@gentoo.org> gossip-0.15.ebuild :
  New release

*gossip-0.14 (04 Aug 2006)

  04 Aug 2006; Marinus Schraal <foser@gentoo.org> gossip-0.14.ebuild :
  New release

  03 Aug 2006; Marinus Schraal <foser@gentoo.org> files/gossip-0.13-ppc_conn_fix.patch :
  zip patch so it doesn't get a cvs id tag

*gossip-0.13-r1 (03 Aug 2006)
