@@ -2,19 +2,24 @@
 Hash: SHA1
 
 DIST gossip-0.22.tar.bz2 1295504 RMD160 36d050230a910ad41b8b949b1676266513442e3e SHA1 06f573f7a3347a17c42d96e21fa268b9a4949055 SHA256 ba118a93dfe4de03915dafb5c573846244674e78179b8f7fb05167cb5e119473
+DIST gossip-0.23.tar.bz2 1292386 RMD160 36ad5e45d0a5e692ce1cba43e5ea270589a4fbed SHA1 3f500b96e0474c1ee0d8dcd441ed0914ff543255 SHA256 f822d9cdadf03421b2b0240293930ced0f9ba1371eaf3161315dbd7972fa0dc3
 DIST gossip-0.9.tar.bz2 994982 RMD160 1a6ff83c6e4ca1f400475537e667cdf3f6d42538 SHA1 6b0c1b1fa1b861fccc12e13e3b4bdb10cbb04c8a SHA256 8397ef467bac32b4b2c5f1cc122e356f5262731b0206f6fe52540afb20ac4aea
 EBUILD gossip-0.22.ebuild 1185 RMD160 3806f9a7a27be8ebdb8a5c77c5a75b9e8f728ffd SHA1 fdbf3d0ea491f038a9d1893491e6a99e69bc39f4 SHA256 bee264c4583f007a50203dcb6363648e163deea328a0343966362bb6e24cd7fd
 MD5 ddc851303fe9c60109b47632c53c500f gossip-0.22.ebuild 1185
 RMD160 3806f9a7a27be8ebdb8a5c77c5a75b9e8f728ffd gossip-0.22.ebuild 1185
 SHA256 bee264c4583f007a50203dcb6363648e163deea328a0343966362bb6e24cd7fd gossip-0.22.ebuild 1185
+EBUILD gossip-0.23.ebuild 1185 RMD160 e11e2d7f5d1e7af3d7e4c9871515abb9d4ffa3cd SHA1 4fe5f20b75398b3894a662475385eed843b0ff7b SHA256 4a80e1658234bbb971280be1b69c553390dc6b5603ffaabb56beff08e3ffd9b1
+MD5 40df88900b76bad28ebe4a51dee0e40f gossip-0.23.ebuild 1185
+RMD160 e11e2d7f5d1e7af3d7e4c9871515abb9d4ffa3cd gossip-0.23.ebuild 1185
+SHA256 4a80e1658234bbb971280be1b69c553390dc6b5603ffaabb56beff08e3ffd9b1 gossip-0.23.ebuild 1185
 EBUILD gossip-0.9.ebuild 935 RMD160 3e329567f3805e2f8367315e65db15a6d7cdf587 SHA1 5f1667ba6bb29c728cbcf01172f54a2fa1307a72 SHA256 34b3f4bb561c3d891c8d602a8d09eb5b3bc47b0d2a37e64a15561767d5a752cb
 MD5 b8871adaeceb5c2ddf1c1e82efac58ef gossip-0.9.ebuild 935
 RMD160 3e329567f3805e2f8367315e65db15a6d7cdf587 gossip-0.9.ebuild 935
 SHA256 34b3f4bb561c3d891c8d602a8d09eb5b3bc47b0d2a37e64a15561767d5a752cb gossip-0.9.ebuild 935
-MISC ChangeLog 8403 RMD160 be43e8cd07c566cc4346ab58c72bca0d9439493d SHA1 463b8e104c31fb5369984cb76a76b70afe101e37 SHA256 1718855efb233cebd5c06ed8f9e7c6aa7057b1d5c433415b0610f82fe664ab93
-MD5 f059f5ca0a59b3899cbe9960ccf22751 ChangeLog 8403
-RMD160 be43e8cd07c566cc4346ab58c72bca0d9439493d ChangeLog 8403
-SHA256 1718855efb233cebd5c06ed8f9e7c6aa7057b1d5c433415b0610f82fe664ab93 ChangeLog 8403
+MISC ChangeLog 8518 RMD160 1d0f873af7ab5448fd50a797694d54d06ac211ee SHA1 0653423e6cecff792570cd64d338ced3287aa0d2 SHA256 02ad94e701f518292d55773accc727324aafa81fe4a5699281c55799c7ad0fe3
+MD5 decbfc056bad7a37dea207c48c2e7f04 ChangeLog 8518
+RMD160 1d0f873af7ab5448fd50a797694d54d06ac211ee ChangeLog 8518
+SHA256 02ad94e701f518292d55773accc727324aafa81fe4a5699281c55799c7ad0fe3 ChangeLog 8518
 MISC metadata.xml 291 RMD160 62e9279857b930af812c701a7b345fbf64dde1a4 SHA1 665642f3883be6b373c5852d37b2e361b8f6b3b6 SHA256 de23ac48a0a04ffb18b093b4698426ade841e315f2c88b15b32a6d6c7df3cf2c
 MD5 d401fd79e8f53e8a459710d3d037e1df metadata.xml 291
 RMD160 62e9279857b930af812c701a7b345fbf64dde1a4 metadata.xml 291
@@ -22,13 +27,16 @@ SHA256 de23ac48a0a04ffb18b093b4698426ade841e315f2c88b15b32a6d6c7df3cf2c metadata
 MD5 7a6c8a403a00933880e869dd4f948b7c files/digest-gossip-0.22 241
 RMD160 46b8ce60ab297e9b17d16acd4942e91dbb7099ec files/digest-gossip-0.22 241
 SHA256 506316b6094ac0cd35098584b9171b36c6948f55beec09e6dedf18ed91dfa1d5 files/digest-gossip-0.22 241
+MD5 3cdf227216572cf0c1720e3f4c0faca9 files/digest-gossip-0.23 241
+RMD160 a6dbdc3c9c10d20fd2d721a1e8ddeffe0d88e6ab files/digest-gossip-0.23 241
+SHA256 9e60f4d9907a3a1fd0aa18cbc8ffc0054df074feec0ba4cbc1f3451d20c4c887 files/digest-gossip-0.23 241
 MD5 4e21efec32c4c65dbfb928498522f410 files/digest-gossip-0.9 235
 RMD160 449bd29ef827f52d65e565039010c8d713fd33bb files/digest-gossip-0.9 235
 SHA256 fae5f3f14dbf24641ad10f899f6285af7748b0c4356876d11777b56739170a87 files/digest-gossip-0.9 235
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFF7yNT+IXOQtHLm/gRApXOAJ91Ai4RpSXMTU5kOHoxD2MM6zza5wCfUvmr
-Fu9vIR6Q+KrzuUTfiViuY+Y=
-=OP4l
+iD8DBQFF7yai+IXOQtHLm/gRArxiAJ9JOGNZz0dBCcu2dFP/OeQa++WscQCfeazl
+oDMr3QckjQlOzn2pGgPLUyc=
+=aFNm
 -----END PGP SIGNATURE-----
