@@ -1,0 +1,3 @@
+MD5 a6175debac9909ea1c6fa19afb1794ae gossip-0.23.tar.bz2 1292386
+RMD160 36ad5e45d0a5e692ce1cba43e5ea270589a4fbed gossip-0.23.tar.bz2 1292386
+SHA256 f822d9cdadf03421b2b0240293930ced0f9ba1371eaf3161315dbd7972fa0dc3 gossip-0.23.tar.bz2 1292386
